--- a/bower.json
+++ b/bower.json
@@ -1,15 +1,19 @@
 {
-    "name": "angular-cordova-ready-service",
-    "version": "0.0.2",
-    "main": "src/service.js",
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "components"
-    ],
-    "dependencies": {
-        "angular": "~1.2.0",
-        "angular-resource": "~1.2.0",
-        "angular-mocks": "v1.2.0"
-    }
+  "name": "angular-cordova-ready-service",
+  "version": "0.0.3",
+  "main": "src/service.js",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "components"
+  ],
+  "dependencies": {
+    "angular": "~1.2.0"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.2.0"
+  },
+  "resolutions": {
+    "angular": "1.2.15"
+  }
 }
